Fix z-index bugs

--- a/lib-less/_helpers.less
+++ b/lib-less/_helpers.less
@@ -782,7 +782,7 @@ flexibility with non-UL elements */
 
   &:focus, &:hover {
     border: 1px solid @link-color;
-    z-index: 10;
+    z-index: @zindex-button + 1;
   }
 
   .pull-right, .pull-left {
